--- a/admin.html
+++ b/admin.html
@@ -1,188 +1,38 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BDStreamHub Admin Panel</title>
+  <meta charset="UTF-8"/>
+  <title>Admin – BDStreamHub</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f1f1f1;
-      padding: 20px;
-    }
-    h2 {
-      margin-top: 30px;
-      background: #007BFF;
-      color: white;
-      padding: 10px;
-      border-radius: 6px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0 15px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    button {
-      padding: 10px 20px;
-      background: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .match-card, .notice-box {
-      background: white;
-      padding: 15px;
-      margin-bottom: 20px;
-      border-radius: 6px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .team-logo {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-    .notice-box {
-      border: 2px solid #ffc107;
-      background: #fff3cd;
-      font-weight: bold;
-      color: #856404;
-    }
-    .countdown {
-      font-size: 18px;
-      font-weight: bold;
-      color: #dc3545;
-    }
-    .history-table {
-      width: 100%;
-      border-collapse: collapse;
-      background: white;
-      margin-top: 30px;
-    }
-    .history-table th, .history-table td {
-      border: 1px solid #ddd;
-      padding: 10px;
-      text-align: center;
-    }
-    .watermark {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      opacity: 0.3;
-      pointer-events: none;
-      z-index: 9999;
-    }
+    body{background:#fafafa;color:#111;font-family:sans-serif;padding:20px;}
+    form input, form textarea{width:100%;margin:6px 0;padding:8px;border-radius:4px;border:1px solid #ccc;}
+    form button{padding:10px 15px;background:#08f;color:#fff;border:none;border-radius:4px;cursor:pointer;}
   </style>
 </head>
 <body>
-  <h2>🎛️ Admin Configuration</h2>
-  <div class="match-card">
-    <label>Stream URL (.mp4/.m3u8/.mpd+DRM):</label>
-    <input type="text" id="streamUrl"><label>License URL (optional):</label>
-<input type="text" id="licenseUrl">
-
-<label>Match Start Time (UTC):</label>
-<input type="datetime-local" id="matchTime">
-
-<label>Match Title:</label>
-<input type="text" id="matchTitle">
-
-<label>Scrolling Notice Message:</label>
-<textarea id="noticeMessage"></textarea>
-
-<label>Watermark URL (PNG/JPG):</label>
-<input type="text" id="watermarkUrl">
-
-<label>Team Logo 1 URL:</label>
-<input type="text" id="logo1">
-
-<label>Team Logo 2 URL:</label>
-<input type="text" id="logo2">
-
-<label>Sponsor Banner URL:</label>
-<input type="text" id="sponsorBanner">
-
-<button onclick="saveMatch()">💾 Save Configuration</button>
-
-  </div>  <h2>📺 Live Matches</h2>
-  <div id="liveMatches"></div>  <h2>🗂️ Match History</h2>
-  <table class="history-table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Start Time</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody id="history"></tbody>
-  </table>  <script>
-    const saveMatch = () => {
-      const match = {
-        streamUrl: document.getElementById('streamUrl').value,
-        licenseUrl: document.getElementById('licenseUrl').value,
-        matchTime: document.getElementById('matchTime').value,
-        matchTitle: document.getElementById('matchTitle').value,
-        noticeMessage: document.getElementById('noticeMessage').value,
-        watermarkUrl: document.getElementById('watermarkUrl').value,
-        logo1: document.getElementById('logo1').value,
-        logo2: document.getElementById('logo2').value,
-        sponsorBanner: document.getElementById('sponsorBanner').value
-      };
-      const matches = JSON.parse(localStorage.getItem('matches') || '[]');
-      matches.push(match);
-      localStorage.setItem('matches', JSON.stringify(matches));
-      loadMatches();
+  <h1>Admin Panel By BDStreamHub</h1>
+  <form id="f">
+    <input name="Match" placeholder="Match Name" required/>
+    <input name="Team1" placeholder="Team 1 Name" required/>
+    <input name="Team2" placeholder="Team 2 Name" required/>
+    <input name="Team1Logo" placeholder="Team 1 Logo URL" required/>
+    <input name="Team2Logo" placeholder="Team 2 Logo URL" required/>
+    <input name="MatchTime" placeholder="MatchTime (YYYY-MM-DDThh:mm:ss+06:00)" required/>
+    <input name="Server1" placeholder="Stream URL 1" required/>
+    <input name="Server2" placeholder="Stream URL 2"/>
+    <input name="Server3" placeholder="Stream URL 3"/>
+    <textarea name="Notice" placeholder="Notice (옵션)"></textarea>
+    <button type="submit">Add Match</button>
+  </form>
+  <script>
+    const apiUrl="https://script.google.com/macros/s/AKfycbys6AFNs2s1MKZ1zyJxaeUW-_Vmq5BuIEC8Qjyr-zXkx_x28F7rWTi2D0EmQlnsPvTnCQ/exec";
+    document.getElementById('f').onsubmit = e => {
+      e.preventDefault();
+      fetch(apiUrl, {
+        method:'POST',
+        body: JSON.stringify(Object.fromEntries(new FormData(e.target)))
+      }).then(r=>r.text()).then(t=>{alert('Added');e.target.reset();});
     };
-
-    const deleteMatch = (index) => {
-      const matches = JSON.parse(localStorage.getItem('matches') || '[]');
-      matches.splice(index, 1);
-      localStorage.setItem('matches', JSON.stringify(matches));
-      loadMatches();
-    };
-
-    const loadMatches = () => {
-      const matchList = document.getElementById('liveMatches');
-      const historyList = document.getElementById('history');
-      const matches = JSON.parse(localStorage.getItem('matches') || '[]');
-      matchList.innerHTML = '';
-      historyList.innerHTML = '';
-      matches.forEach((match, index) => {
-        const countdown = getCountdown(match.matchTime);
-        matchList.innerHTML += `
-          <div class="match-card">
-            <div class="notice-box">${match.noticeMessage}</div>
-            <p><strong>${match.matchTitle}</strong></p>
-            <img src="${match.logo1}" class="team-logo"> vs <img src="${match.logo2}" class="team-logo">
-            <p class="countdown">${countdown}</p>
-            <p><img src="${match.sponsorBanner}" style="width: 100%; max-width: 400px;"/></p>
-            <div class="watermark"><img src="${match.watermarkUrl}" width="100"></div>
-          </div>`;
-
-        historyList.innerHTML += `
-          <tr>
-            <td>${match.matchTitle}</td>
-            <td>${new Date(match.matchTime).toLocaleString()}</td>
-            <td><button onclick="deleteMatch(${index})">❌ Delete</button></td>
-          </tr>`;
-      });
-    };
-
-    const getCountdown = (dateStr) => {
-      const now = new Date();
-      const matchDate = new Date(dateStr);
-      const diff = matchDate - now;
-      if (diff <= 0) return '🔴 Live or Finished';
-      const d = Math.floor(diff / (1000 * 60 * 60 * 24));
-      const h = Math.floor((diff / (1000 * 60 * 60)) % 24);
-      const m = Math.floor((diff / (1000 * 60)) % 60);
-      const s = Math.floor((diff / 1000) % 60);
-      return `${d}d ${h}h ${m}m ${s}s left`;
-    };
-
-    loadMatches();
-    setInterval(loadMatches, 1000);
-  </script></body>
+  </script>
+</body>
 </html>
